# incident-answer-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uvicorn_logging_config.json
app/: config.py  exception_handlers.py  logger.py  logging_config.py  main.py
app/api/: routes.py
app/middleware/: logging_middleware.py
app/models/: errors.py  internals.py  requests.py  responses.py
app/services/: billing_schema.json  classify_llm.py  context_llm.py  extract_llm.py  llm_client.py  llm_service.py  llm_spec_factory.py  prompts.py  request_classifier_schema.json  response_adapters.py  schemas.py
app/services/providers/: base.py  ollama.py  provider_registry.py
attic/: distracting.txt  emotional.txt  indirectwording.txt  main.py  negatives.txt  safest.txt  tests.py  vague.txt
attic/data/: context_docs.txt
attic/prompts/: classifier_system_prompt.txt  contextual_prompt.txt  system_prompt.txt
k8s/: incident-answer-api-deployment.yaml  incident-answer-api-service.yaml  ollama-deployment.yaml  ollama-service.yaml
tests/: test_llm_client.py  test_llm_service.py  test_routes_integration.py
