[project]
name = "incident-answer-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "jsonschema>=4.26.0",
    "uvicorn>=0.46.0"
]
[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1"
]
